# djangorestframework-authentication

./: .gitignore  README.rst  manage.py  requirements.txt  setup.cfg
.github/workflows/: publish.yml
authentication/tests/: settings.py  settings_test_both.py  settings_test_google.py  settings_test_jwt.py  test_google_and_jwt_auth.py  test_google_auth_true.py  test_jwt_auth_true.py  test_serializers.py  test_views.py
