[metadata]
name = djangorestframework-authentication
version = 0.1
description = DJANGO-RESTFRAMEWORK-AUTHENTICATION is an app to manage easily the authentication in Rest API. This library supports classical Django and Json Web Token authentication, moreover it manages Google 0Auth 2.0
long_description = file: README.rst
author = José Miguel Cárdenas Fernández
author_email = josemiguelcardenasfernandez10@gmail.com
license = MIT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages=find:
python_requires = >=3.10
install_requires =
    Django==4.2.3
    djangorestframework==3.14.0
    djangorestframework-simplejwt==5.2.2
    coverage==7.2.7
    requests==2.31.0
    setuptools==65.5.0

[options.packages.find]
exclude =
    authentication.tests*